# voice-agent

./: .gitignore  Plan.md  README.md  package.json  pyproject.toml
src/: agent.js  extension.js  pythonBridge.js  toolLayer.js
test/: agent.test.js
tests/: test_voice_agent.py
voice_agent/: __init__.py  agent.py  agno_runtime.py  cli.py  models.py
voice_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
